# rust-bucklespring

./: .gitignore  Cargo.toml  Cross.toml  PKGBUILD  README.md  bucklespring.1  bucklespring.1.md
.github/workflows/: release.yml
src/: callback.rs  embed.rs  main.rs  playwav.rs
